--- a/catalog.pug
+++ b/catalog.pug
@@ -7,17 +7,15 @@ html(lang="ru")
     link(rel="stylesheet", href="css/style.css")
   body.page
     header.page-header
-      .container
-        .top-row
+      .top-row
+        .container
           .logo-top
             a(href="index.html")
-              img(src="img/logo-technomart.svg", alt="logo")
+              img(src="img/logo-technomart.svg" alt="logo")
           .search
             form(action="search.html" method="get")
+              label.search-icon(for="search")
               input(type="text" id="search" placeholder="Поиск:")
-              label(for="search")
-                svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
-                  path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
           .bookmarks
             .bookmark-icon
             a(href="") закладки:
@@ -27,6 +25,7 @@ html(lang="ru")
             a(href="") корзина:
             span 10
           a.order(href="") оформить заказ
+      .container
         .middle-row
           .slogan
             h2.visually-hidden главные данные
@@ -224,47 +223,49 @@ html(lang="ru")
           h3 пара слов о перфораторах
           p Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
     footer.page-footer
-      .container
-        .footer-top-row
+      .footer-top-row
+        .container
           .logo-bottom
             a(href="index.html" alt="logo" aria-label="main-page")
               img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
-            li
+            li.footer-nav-item
               a(href="") Компания
-            li
+            li.footer-nav-item
               a(href="") Новости
-            li
+            li.footer-nav-item
               a(href="catalog.html") Каталог
-            li
+            li.footer-nav-item
               a(href="") Доставка
-            li
+            li.footer-nav-item
               a(href="") Контакты
         .footer-middle-row
-          p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-            a(href="tel:+78125550555") +7 (812) 555-05-55
-          ul.footer-category
-            li
-              a(href="") Материалы
-            li
-              a(href="") Техника
-            li
-              a(href="") Инструмент
-            li
-              a(href="") Спецпредложения
+          .container
+            p.footer-address г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+              a(href="tel:+78125550555") +7 (812) 555-05-55
+            ul.footer-category
+              li.footer-category-item
+                a(href="") Материалы
+              li.footer-category-item
+                a(href="") Техника
+              li.footer-category-item
+                a(href="") Инструмент
+              li.footer-category-item
+                a(href="") Спецпредложения
         .footer-bottom-row
-          p © 2010-2017 Компания "Техномарт" Все права защищены
-          section.socials
-            .social-item.vk
-              a(href="vk.com" target="_blank" aria-label="vk")
-            .social-item.facebook
-              a(href="facebook.com" target="_blank" aria-label="facebook")
-            .social-item.instagram
-              a(href="instagram.com" target="_blank" aria-label="instagram")
-          p Обратная связь
-          a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
-          p Разработано
-          a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") htmlacademy.ru
+          .container
+            p.footer-rights © 2010-2017 Компания "Техномарт" Все права защищены
+            section.socials
+              .social-item.vk
+                a(href="vk.com" target="_blank" aria-label="vk")
+              .social-item.facebook
+                a(href="facebook.com" target="_blank" aria-label="facebook")
+              .social-item.instagram
+                a(href="instagram.com" target="_blank" aria-label="instagram")
+            p.feedback Обратная связь
+              a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
+            p.developed Разработано
+              a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") htmlacademy.ru
     .cart-popup
       .icon-mark
       p Товар добавлен в корзину!
