--- a/css/style.styl
+++ b/css/style.styl
@@ -39,6 +39,7 @@ $color-38 = #dee3e4
 $color-39 = rgba(255, 255, 255, 0.1)
 $color-40 = rgba(255, 255, 255, 0.2)
 $color-41 = rgba(255, 255, 255, 0.3)
+$color-42 = rgba(255, 255, 255, 0.25)
 
 html
   box-sizing border-box
@@ -86,7 +87,7 @@ html
   font 14px "Cuprum"
   line-height 18px
 
-.page, p, h1
+.page, p, h1, h2, h3
   margin 0 auto
 
 .container
@@ -113,15 +114,18 @@ html
     background-color $color-21
 
 .page-header
-  background linear-gradient(to bottom, $color-02 42px, $color-03 42px)
+  background $color-03
+  padding-bottom 60px
 
 .top-row
+  background $color-02
   font-size 17px
   text-transform capitalize
+  .container
+    display flex
 
 .logo-top
-  display inline-block
-  vertical-align top
+  position absolute
   box-shadow inset 0 -5px 0 $color-05
   background-color $color-04
   &:hover
@@ -130,41 +134,68 @@ html
     background-color $color-21
   img
     padding 11px 55px
+    height 47px
+
 a
   color $color-01
   text-decoration none
 
 .search
-  display inline-block
-  vertical-align top
+  margin-left 270px
+  input
+    width 100%
+    background inherit
+    color $color-01
   width 270px
   &:hover
     background-color $color-20
 
+.search-icon
+  background url('../img/icon-search.svg')
+  width 17px
+  height 17px
+  &:hover
+    fill $color-01
+
 .bookmarks, .cart
-  display inline-block
-  vertical-align top
+  display flex
+  padding 14px 0 13px 17px
+  text-align center
   width 150px
+  color $color-01
   &:hover
     background-color $color-20
   &:active
     background-color $color-22
+    opacity .6
+  span
+    margin-left 5px
 
 .bookmark-icon
-  display inline-block
+  margin-right 13px
   width 14px
   height 16px
-  background $color-01 url('../img/icon-bookmark.svg')
-  opacity 0.3
+  background url('../img/icon-bookmark.svg')
+  opacity .3
+  &:hover
+    opacity 1
+  &:active
+    opacity .5
 
 .cart-icon
-  display inline-block
+  margin-right 17px
   width 15px
   height 15px
-  background $color-01 url('../img/icon-cart.svg')
-  opacity 0.3
+  background url('../img/icon-cart.svg')
+  opacity .3
+  &:hover
+    opacity 1
+  &:active
+    opacity .5
 
 .order
+  padding-top 14px
+  text-align center
   width 150px
   background-color $color-25
   &:hover
@@ -258,7 +289,6 @@ a
 /* catalog style end */
 
 .navigation
-  min-height 60px
   box-shadow inset 0 -5px 0 $color-02
   background-color $color-06
   font-size 17px
@@ -269,7 +299,8 @@ a
 
 .navigation-list
   display flex
-  margin 0 auto
+  padding-left 0
+  margin 0
 
 .navigation-item
   flex-grow 1
@@ -281,28 +312,60 @@ a
     background-color $color-26
   padding 22px 30px
 
+.categories
+  margin-top 59px
+  .container
+    display flex
+
+.left-column
+  .categories-item
+    margin-right 18px
+
 .categories-item
+  width 300px
+  margin 0 0 20px 0
+  padding 26px 0 22px 23px
   h3
     color $color-01
     font 24px "Cuprum-Bold"
-    line-height 30px
+    line-height 21px
     text-transform capitalize
+    margin-bottom 16px
 
-.material
-  background url('../img/icon-1.svg') no-repeat $color-10
+.material, .tool
+  display inline-block
+  vertical-align top
 
 .categories-item-link
+  width 135px
   background-color $color-39
+  padding 14px 0
   text-align center
   text-transform uppercase
   text-decoration none
+  line-height 10px
   &:hover
     background-color $color-40
   &:active
     background-color $color-41
 
+.material
+  background url('../img/icon-1.svg') no-repeat $color-10
+
 .tool
   background url('../img/icon-2.svg') no-repeat $color-11
+
+.technic
+  background url('../img/icon-3.svg') no-repeat $color-12
+
+.sale
+  background url('../img/icon-4.svg') no-repeat $color-13
+
+.delivery
+  background url('../img/icon-5.svg') no-repeat $color-14
+
+.slider
+  width 620px
 
 .slider-item
   h3
@@ -330,15 +393,6 @@ a
   background-image url('../img/icon-right.svg')
   width 22px
   height 40px
-
-.technic
-  background url('../img/icon-3.svg') no-repeat $color-12
-
-.sale
-  background url('../img/icon-4.svg') no-repeat $color-13
-
-.delivery
-  background url('../img/icon-5.svg') no-repeat $color-14
 
 /* catalog styles start */
 
@@ -382,7 +436,6 @@ a
 .choose-filter
   border none
   border-bottom 1px solid
-
 
 .filter
   font 13px "pt-sans"
@@ -434,22 +487,63 @@ a
 
 /* catalog styles end */
 
+.products
+  margin-top 33px
+
 .popular-header
   background-color $color-15
-
-  h3
+  margin-bottom 20px
+  .popular-title
+    margin 0 auto
+    padding 33px 363px 0 35px
     color $color-06
     font-size 30px
     line-height 30px
     text-transform uppercase
+    display inline-block
+    vertical-align top
+  .btn
+    margin 25px 24px 26px 0
+    padding 14px 55px
+    display inline-block
+  .second-title
+    padding 33px 266px 30px 30px
+  .second-btn
+    padding 13px 69px
+
+.goods
+  display flex
+  margin-bottom 20px
 
 .goods-item
+  display flex
+  flex-direction column
+  margin 0 auto
   font 17px "pt-sans-bold"
   line-height 18px
   &:hover
     box-shadow 0 10px 25px $color-27
   &:hover > .hidden
     display block
+  .title, .old-price, .price
+    margin 0 auto
+  .title
+    color $color-07
+    font-size 18px
+    line-height 20px
+    text-align center
+    padding 12px 31px 18px
+  .old-price
+    color $color-16
+    text-transform uppercase
+  .price
+    color $color-01
+    text-transform uppercase
+    background url('../img/btn_copy_14.svg') no-repeat
+    padding 11px 40px 13px 36px
+    margin 13px 36px 21px 43px
+  .price:nth-child(4n)
+    margin-top 31px
 
 .hidden
   display none
@@ -472,23 +566,13 @@ a
       border 3px solid $color-06
       opacity 0.3
 
-.title
-  color $color-07
-  font-size 18px
-  line-height 20px
-
-.old-price
-  color $color-16
-  text-transform uppercase
-
-.price
-  color $color-01
-  text-transform uppercase
-  background-image url('../img/btn_copy_14.svg')
-  width 141px
-  height 38px
+.manufacturers
+  padding-left 0
+  display flex
+  flex-wrap wrap
 
 .manufacturers-item
+  width 220px
   list-style none
   &:hover
     box-shadow 0 10px 25px $color-27
@@ -497,19 +581,53 @@ a
   a
     &:active
       opacity 0.3
+  .item-image
+    display block
+    margin 0 auto
+  .bosch
+    padding 53px 47px
+  .makita
+    padding 50px 48px
+  .dewalt
+    padding 48px 37px
+  .interskol
+    padding 21px 10px
+  .hitachi
+    padding 58px 25px
+  .lg
+    padding 35px 50px
+  .aeg
+    padding 23px 34px
+  .metabo
+    padding 34px 8px
+
+.manufacturers-item:not(:nth-child(4n))
+  margin-right 20px
 
 .service
   background-color $color-17
-  font-family "pt-sans"
+  font 14px "pt-sans"
   line-height 24px
 
-.service
+.service-title
+  width 554px
+  padding-top 68px
+  margin-bottom 28px
   h3
+    margin 0 auto 35px
+    font 30px "Cuprum"
+    line-height 30px
     text-transform uppercase
 
-.service-tab-nav
-  list-style none
+.service-wrapper
+  display inline-flex
 
+.service-tab-nav
+  padding 47px 0
+  list-style none
+  margin 0 80px 0 0
+  width 240px
+  border-right 10px solid $color-42
   li
     box-shadow 0 1px 0 $color-02, inset 0 1px 0 $color-09
     background-color $color-06
@@ -519,63 +637,103 @@ a
     &:active
       box-shadow 0 1px 0 $color-01, inset 0 1px 0 $color-01
       background-color $color-01
-
   a
     &:active
       color $color-06
+  .service-tab-item
+    padding 21px 0 20px 22px
+    font 21px "Cuprum-Bold"
+    line-height 30px
+
+.service-tab-content
+  padding-top 48px
+  h3
+    font 36px "Cuprum"
+    line-height 36px
+    text-transform uppercase
+    margin-bottom 33px
+
+.text-delivery, .text-guarantee, .text-credit
+  font-size 13px
+.text-delivery
+  width 275px
+.text-guarantee
+  width 379px
+.text-credit
+  width 279px
 
 .service-tab-delivery
   background url('../img/Layer_131.png') no-repeat
+  width 468px
+  height 261px
+  margin-top 21px
 
 .service-tab-guarantee
   background url('../img/Layer_130.png') no-repeat
+  width 389px
+  height 283px
 
 .service-tab-credit
   background url('../img/Layer_119.png') no-repeat
+  width 465px
+  height 285px
 
 .about
+  margin 82px 0 86px
   h2
     font-size 30px
     line-height 30px
     text-transform uppercase
-
-.about
-  p
+    margin 0 0 35px
+  .text
     font 13px "pt-sans"
     line-height 24px
+    margin-bottom 35px
+    width 519px
+  .text:nth-child(3)
+    margin-bottom 28px
+  .container
+    display flex
+
+.company
+  display flex
+  flex-direction column
+  width 520px
+  margin-right 120px
+  .btn
+    padding 14px 40px 12px
+    margin-top 13px
+    width 220px
 
 .partners
   list-style none
   font-size 18px
   line-height 20px
+  margin 0
+  padding-left 0
+  position relative
+  .partner
+    margin-bottom 17px
+  .partner:before
+    content ""
+    position absolute
+    left 0
+    width 25px
+    height 2px
+    background-color $color-04
+
+.contacts
+  display flex
+  flex-direction column
+  .text
+    width 179px
+    margin 0 0 35px
+  .btn
+    padding 14px 59px 12px 63px
+    margin-top 40px
+    width 300px
 
 /* catalog styles start */
-
-/* cart start */
-
-.cart-popup
-  border-top 7px solid $color-04
-  box-shadow 0 20px 40px $color-27
-  p
-    font-size 30px
-    line-height 30px
-  button
-    text-transform uppercase
-
-.order-buy
-  background-color $color-35
-
-.icon-mark
-  background url('../img/icon-mark.svg')
-  width 66px
-  height 66px
-
-.close
-  background url('../img/icon-close.svg')
-  width 21px
-  height 21px
-
-/* cart end */
 
 .pager
   font 13px "pt-sans"
@@ -612,26 +770,6 @@ a
 
 /* catalog styles end */
 
-/* send form start */
-
-.popup-write-us
-  border-top 7px solid $color-04
-  box-shadow 0 20px 40px $color-36
-  p
-    font-size 18px
-
-.half-width, .full-width
-  input
-    border 2px solid $color-38
-    font 13px "pt-sans"
-
-.form-button
-  background-color $color-37
-  .btn
-    color $color-01
-
-/* send form end */
-
 .page-footer
   background-color $color-06
   font-size 18px
@@ -640,12 +778,19 @@ a
 .logo-bottom
   box-shadow inset 0 -5px 0 $color-05
   background-color $color-04
+  width 220px
+  padding 20px 41px 25px
+  margin-right 164px
+  display inline-flex
   a
     width 100%
     height 100%
 
 .footer-nav
   list-style none
+  padding-left 0
+  display inline-flex
+  margin 0
   a
     color $color-18
     &:hover
@@ -653,11 +798,30 @@ a
     &:active
       opacity 0.5
 
+.footer-nav-item
+  padding 25px 30px 13px
+
+.footer-nav-item:first-child
+  padding-left 0
+
+.footer-nav-item:last-child
+  padding-right 0
+
 .footer-middle-row
   color $color-03
+  margin 32px 0 53px
+
+.footer-address
+  display inline-flex
+  flex-direction column
+  width 322px
+  margin-right 87px
 
 .footer-category
+  display inline-flex
   list-style none
+  margin 0
+  padding-left 0
   a
     color $color-19
     &:hover
@@ -665,11 +829,22 @@ a
     &:active
       opacity 0.5
 
+.footer-category-item
+  padding 0 30px
+
+.footer-category-item:first-child
+  padding-left 0
+
+.footer-category-item:last-child
+  padding-right 0
+
 .footer-bottom-row
   background-color $color-02
   font-size 16px
 
 .footer-bottom-row
+  .container
+    padding 35px 10px 30px
   p
     color $color-01
   a
@@ -679,28 +854,135 @@ a
     &:active
       color $color-04
 
+.footer-rights, .socials
+  display inline-flex
+
+.feedback, .developed
+  margin 0
+  display inline-flex
+  flex-direction column
+
+.footer-rights
+  width 228px
+  margin-right 161px
+
+.socials
+  margin-right 116px
+
+.feedback
+  width 135px
+  margin-right 53px
+
+.developed
+  width 96px
+
+.vk
+  background url('../img/icon-vk.svg') no-repeat center
+  width 26px
+  height 15px
+
+.facebook
+  background url('../img/icon-fb.svg') no-repeat center
+  width 12px
+  height 22px
+
+.instagram
+  background url('../img/icon-insta.svg') no-repeat center
+  width 21px
+  height 21px
+
 .social-item
+  width 42px
+  height 42px
+  border-radius 50%
+  margin-right 3px
   background-color $color-20
   &:hover, &:active
     background-color $color-04
-
   a
     display inline-block
     vertical-align top
     width 100%
     height 100%
 
-.vk
-  background-image url('../img/icon-vk.svg')
-  width 26px
-  height 15px
+/* send form start */
 
-.facebook
-  background-image url('../img/icon-fb.svg')
-  width 12px
-  height 22px
+.popup-write-us
+  width 620px
+  border-top 7px solid $color-04
+  box-shadow 0 20px 40px $color-36
+  p
+    font-size 18px
 
-.instagram
-  background-image url('../img/icon-insta.svg')
+.form-container
+  padding 48px 80px 37px
+
+.half-width
+  display inline-flex
+  flex-direction column
+  width 220px
+
+.form-name
+  margin-right 16px
+  input
+    padding 14px 0 14px 16px
+
+.form-e-mail
+  input
+    padding 14px 0 13px 16px
+
+.form-text
+  textarea
+    padding 14px 0 0 16px
+
+.full-width
+  display inline-flex
+  flex-direction column
+  width 460px
+  margin-top 22px
+
+.half-width, .full-width
+  label
+    margin-bottom 13px
+  input
+    border 2px solid $color-38
+    font 13px "pt-sans"
+
+.form-button
+  padding 37px 80px
+  background-color $color-37
+  .btn
+    padding 14px 198px
+    color $color-01
+
+.close
+  float right
+
+/* send form end */
+
+/* cart popup start */
+
+.cart-popup
+  border-top 7px solid $color-04
+  box-shadow 0 20px 40px $color-27
+  p
+    font-size 30px
+    line-height 30px
+  button
+    text-transform uppercase
+
+.order-buy
+  background-color $color-35
+
+.icon-mark
+  background url('../img/icon-mark.svg')
+  width 66px
+  height 66px
+
+.close
+  background url('../img/icon-close.svg')
   width 21px
   height 21px
+
+/* cart popup end */
+
